--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
 <resources>
-    <string name="app_name">MyFavLocalesApp</string>
+    <string name="app_name">A FavLocales App</string>
     <string name="title_activity_maps">Map</string>
 </resources>
